# audb

./: Cargo.toml  README.md
audb-client/: Cargo.toml
audb-client/src/: main.rs
audb-core/: Cargo.toml
audb-core/src/: lib.rs
audb-core/src/features/: logs.rs  mod.rs  shell.rs
audb-core/src/features/app/: launch.rs  mod.rs  stop.rs
audb-core/src/features/config/: mod.rs  state.rs
audb-core/src/features/device/: add.rs  list.rs  remove.rs
audb-core/src/features/input/: mod.rs  screenshot.rs  scripts.rs  swipe.rs  tap.rs
audb-core/src/features/install/: rpm.rs
audb-core/src/tools/: errors.rs  session.rs  ssh.rs  types.rs  validation.rs
audb-protocol/: Cargo.toml
audb-protocol/src/: lib.rs  types.rs  wire.rs
audb-server/: Cargo.toml
audb-server/src/: connection.rs  daemon.rs  main.rs  pool.rs  socket_server.rs
scripts/: swipe.py  tap.py
src/: main.rs
src/features/: mod.rs  shell.rs
src/features/config/: device_store.rs
src/features/device/: add.rs  select.rs
src/features/input/: mod.rs  screenshot.rs  scripts.rs  swipe.rs  tap.rs
src/features/install/: rpm.rs
src/tools/: macros.rs  mod.rs  shell_escape.rs  ssh.rs  types.rs
