[package]
name = "audb"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
russh = "0.54.5"
russh-sftp = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = { version = "0.11", features = ["password"] }
shellexpand = "3.1"
directories = "5.0"
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
thiserror = "2.0"
colored = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
