[package]
name = "audb-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "audb"
path = "src/main.rs"

[dependencies]
audb-core = { path = "../audb-core" }
audb-protocol = { path = "../audb-protocol" }

tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
libc = "0.2"
shellexpand = "3.1"
chrono = "0.4"

[dev-dependencies]
