[package]
name = "audb-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI client for Aurora Debug Bridge - development tool for Aurora OS"
repository = "https://github.com/KotDath/audb"
readme = "../README.md"
keywords = ["aurora", "adb", "cli", "mobile"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "audb"
path = "src/main.rs"

[dependencies]
audb-core = { version = "0.1.1", path = "../audb-core" }
audb-protocol = { version = "0.1.0", path = "../audb-protocol" }

tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
libc = "0.2"
shellexpand = "3.1"
chrono = "0.4"

[dev-dependencies]
