[package]
name = "audb-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Core library for Aurora Debug Bridge (audb)"
repository = "https://github.com/KotDath/audb"
readme = "../README.md"
keywords = ["aurora", "adb", "ssh", "mobile"]
categories = ["development-tools"]

[dependencies]
tokio = { version = "1.48", features = ["full"] }
russh = "0.54.5"
russh-sftp = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = { version = "0.11", features = ["password"] }
shellexpand = "3.1"
directories = "5.0"
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
thiserror = "2.0"
colored = "2.0"
audb-protocol = { version = "0.1.0", path = "../audb-protocol" }
libc = "0.2"

[lib]
name = "audb_core"
path = "src/lib.rs"
