[package]
name = "audb-protocol"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Protocol definitions for Aurora Debug Bridge (audb)"
repository = "https://github.com/KotDath/audb"
readme = "../README.md"
keywords = ["aurora", "adb", "protocol", "mobile"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "net"] }

[lib]
name = "audb_protocol"
path = "src/lib.rs"
